Vastly shortened version for Urban Climate

--- a/VTUF-3DDesign_SymbolsList.tex
+++ b/VTUF-3DDesign_SymbolsList.tex
@@ -1,4 +1,5 @@
 
+\nomenclature{$T_{mrt}$}{mean radiant temperature (\SI{}{\degreeCelsius})}
 
 List of symbols, their definition, and units.
 {\footnotesize
