--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -161,7 +161,7 @@ Now, with the completion of this new model, VTUF-3D (Vegetated Temperatures Of U
 
 To model the impacts of increased water and vegetation on human thermal comfort in urban areas requires modifications to the TUF-3D \citep{Krayenhoff2007} model. TUF-3D in its unmodified form lacks functionality for the physical representation of vegetation along with their physiological processes. Also missing are latent energy fluxes and the water cycle associated with soil, vegetation, evaporation, and precipitation. 
 
-Two major changes must be made to the TUF-3D model to add this missing functionality. The first is representation of vegetation's physical form and radiative interactions within an urban canyon. VTUF-3D (Vegetated Temperatures Of Urban Facets) uses cube shaped structures (as TUF-3D uses to represent buildings) to represent vegetation. These cubes store the surface properties and states and interact with the rest of the VTUF-3D domain. The vegetation's true shape is represented in MAESPA \citep{Duursma2012}, with each individually vegetation element modelled offline, generating values of vegetation absorption, transmission, and reflection to be loaded by VTUF-3D as needed in a simulation (Figure \ref{fig:TUFWithMaespaVegRadiation}).  
+Two major changes must be made to the TUF-3D model to add this missing functionality. The first is representation of vegetation's physical form and radiative interactions within an urban canyon. VTUF-3D (Vegetated Temperatures Of Urban Facets) uses cube shaped structures (as TUF-3D uses to represent buildings) to represent vegetation. These cubes store the surface properties and states and interact with the rest of the VTUF-3D domain. The vegetation's true shape is represented in MAESPA \citep{Duursma2012}, with each vegetation element individually modelled offline, calculating values of vegetation absorption, transmission, and reflection to be loaded by VTUF-3D as needed in a simulation (Figure \ref{fig:TUFWithMaespaVegRadiation}).  
 
 \begin{figure}[!htbp]
  \includegraphics[trim = 15mm 41mm 0mm 31mm, clip, scale=0.45]{images/TUFWithMaespaVegRadiation.pdf}  
@@ -175,32 +175,30 @@ The second major change required is including the physiological processes of veg
  \caption{VTUF-3D energy balance modelling with vegetation MAESPA tiles\label{fig:TUFWithMaespaInsert}.}
 \end{figure}
 
-At the conclusion of each timestep, VUF-3D calculates the energy balance of each surface. Incoming radiation energy and existing stored energy are partitioned into new values of storage and radiated heat. In order to account for the addition of vegetation, these energy balances have been modified to account for latent energy fluxes and the physiological processes of vegetation. 
-
-In VTUF-3D, a variable for latent energy is added and energy allocated to it from the pool of available energy. The vegetation is treated as a flat two dimensional ground surface tile. This is done by tiling multiple instances of MAESPA (each individual tree with its unique configuration) into surfaces that have vegetation (Figure \ref{fig:TUFWithMaespaInsert}). These instances provide radiation transmission, energy fluxes, and soil water storage for each item of vegetation in the domain using its unique properties and characteristics. If a surface does not contain vegetation, VTUF-3D runs its normal energy balance calculations. 
+At the conclusion of each timestep, VUF-3D calculates the energy balance of each surface. Incoming radiation energy and existing stored energy are partitioned into new values of stored and radiated heat. A variable for latent energy has been added to the  model and energy is allocated to it from the pool of available energy. The vegetation is treated as a flat two dimensional ground surface tile for the surface energy balances. Tiles of MAESPA instances (in each an individual tree or other types of vegetation) are used for surfaces that have vegetation (Figure \ref{fig:TUFWithMaespaInsert}). These instances provide values of radiation transmission, energy fluxes, and soil water storage for each item of vegetation in the domain using their unique properties and characteristics. If a surface does not contain vegetation, VTUF-3D runs its normal energy balance calculations. 
 
 \subsection{Model description}
-In the following sections, the VTUF-3D model is detailed. This model is constructed using the TUF-3D model, as described in \cite{Krayenhoff2007}, leaving all its components largely unchanged except for the two interactions as described in the overview of changes (Section \ref{sec:DesignOverview}). The vegetation functionality is added through the MAESPA model, described in \cite{Duursma2012}, with some of its components running in parallel and replacing some of the TUF-3D components in some parts of a modelled domain. The linkage components will be described later in this chapter in Section \ref{sec:integration}.
+In the following sections, the VTUF-3D model is detailed. This model is constructed using the TUF-3D model, as described in \cite{Krayenhoff2007}, leaving all its components largely unchanged except for the two interactions as described in the overview of changes (Section \ref{sec:DesignOverview}). The vegetation functionality is added through the MAESPA model, described in \cite{Duursma2012}, with some of its components running in parallel and replacing some of the TUF-3D components in some parts of a modelled domain. The linkage components will be described later in this article in the model integration section, Section \ref{sec:integration}.
 
 \subsection{Radiative processes}
 \subsubsection{Radiative transfer}\label{sec:radiativetransfer}
 
-In order to track the movement and allocation of radiation, VTUF-3D's modelling domain is built up in 3-D using cubes and their surfaces. Ray tracing determines the visibility of each surface to each other, matched using plane parallel analytical equations of \cite{Siegel2001} and \cite{Hottel1967}. Ray tracing also determines determine sunlit and shaded patterns on the 3-D urban surface throughout a simulation using a modified version of the \cite{Soux2004} algorithm. Reflections and absorption of longwave and shortwave are modelled using a radiosity approach (radiative reflection and emission treated as perfectly diffuse). All the specific details of these radiative transfer calculations are contained in \cite{Krayenhoff2007}.
+In order to track the movement and allocation of radiation, VTUF-3D's modelling domain is built up in 3-D using cubes and their surfaces (facets). Ray tracing determines the visibility of each surface to each other, matched using plane parallel analytical equations of \cite{Siegel2001} and \cite{Hottel1967}. Ray tracing also determines determine sunlit and shaded patterns on the 3-D urban surface throughout a simulation using a modified version of the \cite{Soux2004} algorithm. Reflections and absorption of longwave and shortwave are modelled using a radiosity approach (radiative reflection and emission treated as perfectly diffuse). All the specific details of these radiative transfer calculations are contained in \cite{Krayenhoff2007}.
 
-For vegetated parts of the domain, radiative transfer is calculated by components from MAESPA, full details included in \cite{Duursma2012}. Incoming radiation, both photosynthetic radiation (PAR) and near infrared (NIR) is partitioned into direct and diffuse using \cite{Weiss1985}. Canopy structure is calculated based on \cite{Wang1990}, supporting a variety of crown shapes including conical, half-ellipsoidal, and paraboloidal. Absorption and scattering of radiation (PAR, NIR, and thermal radiation) by the canopy is calculated using \cite{Norman1979}. 
+For vegetated parts of the domain, radiative transfer is calculated by components from MAESPA. Incoming radiation, both photosynthetic radiation (PAR) and near infrared (NIR) is partitioned into direct and diffuse using \cite{Weiss1985}. Canopy structure is calculated based on \cite{Wang1990}, supporting a variety of crown shapes including conical, half-ellipsoidal, and paraboloidal. Absorption and scattering of radiation (PAR, NIR, and thermal radiation) by the canopy is calculated using \cite{Norman1979}. Full details of all calculations are included in \cite{Duursma2012}.
 
 \subsubsection{Stomatal conductance}\label{Stomatalconductance}
 Stomatal conductance within the vegetation uses MAESPA components based on the widely used Ball-Berry type approach \citep{Ball1987,Duursma2012}. Options are available to use a number of variations including: the Ball-Berry model \citep{Ball1987}, the Ball-Berry-Leuning model \citep{Leuning1995}, the Ball-Berry-Opti model \citep{Medlyn2011}, the Tuzet model \citep{Tuzet2003}. The use of this stomatal conductance approach requires more detailed parameters than the `Big Leaf' stomatal resistance scheme \citep{Bailey1981,Kowalczyk1991}, but this detail allows modelling of specific species as well as variations of canopy size and vegetation health and drilling down to specific items of vegetation \citep{Duursma2012} as opposed to a canopy-wide average. 
 
 \subsubsection{Calculation of leaf temperature and leaf water potential}\label{sec:calcleaftemp}
-Solving the Tuzet variation of the Ball-Berry stomatal conductance, using $E_{L}$, leaf level transpiration rate ($\mu$mol m$^{-2}$s$^{-1}$), to find $\Psi_{L}$, the leaf water potential ($MPa$), then can be used to estimate leaf temperature throughout the canopy. For each grid point, $E_{L}$ is calculated with the Penman-Monteith equation, using the boundary layer conductance and total conductance (all detailed in the next section, Section \ref{sec:totalcanopy}). Leaf temperature is found by iteratively closing the energy balance of the leaf, based on \cite{Wang1998}. See \cite{Duursma2012} for complete details.
+Solving the Tuzet variation of the Ball-Berry stomatal conductance, using $E_{L}$, leaf level transpiration rate ($\mu$mol m$^{-2}$s$^{-1}$), to find $\Psi_{L}$, the leaf water potential ($MPa$), is used to estimate leaf temperature throughout the canopy. For each grid point, $E_{L}$ is calculated with the Penman-Monteith equation, using the boundary layer conductance and total conductance (all detailed in the next section, Section \ref{sec:totalcanopy}). Leaf temperature is found by iteratively closing the energy balance of the leaf, based on \cite{Wang1998}. See \cite{Duursma2012} for complete details.
 
 %\nomenclature{$E_{L}$}{leaf level transpiration rate ($\mu$mol m$^{-2}$s$^{-1}$)} 
 %\nomenclature{$\Psi_{L}$}{leaf water potential (MPa)} 
 
 \subsubsection{Total canopy transpiration}\label{sec:totalcanopy}
 
-Canopy transpiration is calculated using the Penman-Monteith equation \citep{Penman1948,Monteith1965}. It is calculated by summing the application of the equation to each grid point using the calculated amounts of absorbed radiation (PAR, NIR, and thermal) for each tree. $g_{B}$, boundary layer conductance (mol m$^{-2}$s$^{-1}$), and $g_{V}$, the total conductance to water vapour (mol m$^{-2}$s$^{-1}$), is calculated using \cite{Jones1992}. The output of the canopy transpiration is used in Section \ref{sec:calcleaftemp} for leaf temperature calculations. See \cite{Duursma2012} for complete details.
+Canopy transpiration is calculated using the Penman-Monteith equation \citep{Penman1948,Monteith1965}. It is calculated by summing the application of the equation to each grid point using the calculated amounts of absorbed radiation (PAR, NIR, and thermal) for each tree. $g_{B}$, boundary layer conductance (mol m$^{-2}$s$^{-1}$), and $g_{V}$, the total conductance to water vapour (mol m$^{-2}$s$^{-1}$), are calculated using \cite{Jones1992}. The output of the canopy transpiration is used in Section \ref{sec:calcleaftemp} for leaf temperature calculations. See \cite{Duursma2012} for complete details.
 
 %\nomenclature{$g_{B}$}{boundary layer conductance (mol m$^{-2}$s$^{-1}$)} 
 %\nomenclature{$g_{V}$}{total conductance to water vapour (mol m$^{-2}$s$^{-1}$)} 
@@ -208,7 +206,7 @@ Canopy transpiration is calculated using the Penman-Monteith equation \citep{Pen
 
 \subsubsection{Conduction and surface temperatures}
 
-Heat conduction between the layers in each surface in VTUF-3D (based on TUF-3D) is calculated in a 1-D equation, based on \cite{Masson2000}. In order to calculate the surface temperature (the boundary condition for the surface), using the energy balance of the surface, based on a version of \cite{Arnfield1990}. See \cite{Krayenhoff2007} for complete details.
+Heat conduction between the layers in each surface in VTUF-3D (based on TUF-3D) is calculated in a 1-D equation, based on \cite{Masson2000}. Calculating the surface temperature (the boundary condition for the surface) using the energy balance of the surface is based on a version of \cite{Arnfield1990}. See \cite{Krayenhoff2007} for complete details.
 
 
 \subsubsection{Energy balance partitioning during simulation timesteps}\label{sec:parttimestep}
@@ -252,7 +250,7 @@ where $h_{i}$ is the previously calculated heat transfer coefficient (Wm$^{-2}$K
 \nomenclature{$h_{i}$}{heat transfer coefficient (Wm$^{-2}$K$^{-1}$)} 
 \nomenclature{$T_{conv}$}{converging canyon temperature (K)} 
 
-For latent energy fluxes ($Q_{E}$), $Q_{E,veg}$ is the value for the grid square calculated in the MAESPA tree calculations, loaded from the MAESPA data.
+For latent energy fluxes ($Q_{E}$), $Q_{E,veg}$ is the value for the grid square calculated in the MAESPA tree calculations, loaded from the MAESPA data for the individual item of vegetation.
 
 \nomenclature{$Q_{E}$}{latent heat flux (Wm$^{-2}$)}
 \nomenclature{$Q_{E,veg}$}{calculation of vegetation latent heat flux (Wm$^{-2}$)} 
@@ -486,18 +484,20 @@ This UTCI formula was designed to provide human thermal comfort assessments usin
 
 \subsection{VTUF-3D model integration}\label{sec:integration}
 \subsubsection{TUF-3D shading logic}\label{sec:existingshading}
-In order to understand the changes made to create VTUF-3D, an overview of the previous TUF-3D logic is necessary. Two dimensional (x,y) locations of building locations are configured along with their heights. TUF-3D uses forcing data of temperature, humidity, incoming radiation levels, and wind speed and direction from a location at specified z height (above the canopy). Wind is used in roughness calculations but not used to resolve movements around the buildings (as a CFD based model would). This simplification is a design decision trade-off to reduce the complexity of the model and the intensity of computations, while still producing accurate enough results (see Section \ref{sec:convection}).
+In order to understand the changes made to create VTUF-3D, an overview of the TUF-3D logic is necessary. Two dimensional (x,y) locations of building locations are configured along with their heights. TUF-3D uses forcing data of temperature, humidity, incoming radiation levels, and wind speed and direction from a location at specified z height (above the canopy). Wind is used in roughness calculations but not used to resolve movements around the buildings (as a CFD based model would). This simplification is a design decision trade-off to reduce the complexity of the model and the intensity of computations, while still producing accurate enough results (see Section \ref{sec:convection}).
 
 
 
 \begin{figure}[!htbp]
-\includegraphics[trim = 13mm 50mm 52mm 15mm, clip, scale=0.75]{images/ModelDiagramsCombined2.pdf}
+%\fbox{
+\includegraphics[trim = 15mm 50mm 132mm 15mm, clip, scale=0.75]{images/ModelDiagramsCombined2.pdf}
+%   }
    \caption{(a) Initial view angles ray tracing, run during model initialisation to determine which surfaces are visible to each other. \label{fig:initray} (b) TUF-3D unmodified shading logic in which each surface performs four ray traces (from each surface quarter) towards the sun and determines sunlit percentage based on how many rays leave the domain without meeting an obstruction. Trees do not exist in this version (they will be added in Figure \ref{fig:modshading}e) but are shown to illustrate how their impact is missing from the unmodified logic. \label{fig:shading} (c) VTUF-3D modified shading, timestep ray tracing, using the same process as the unmodified logic but setting a flag for any ray that encounters vegetation. \label{fig:modshading} (d) VTUF-3D modified shading, reverse ray tracing. For any rays that encounter vegetation in forward ray tracing, reverse ray traces are performed to allocate radiation to intervening encountered surfaces. \label{fig:modshadingreverse}} 
 \end{figure}
 
 %\nomenclature{$z_{H}$}{mean building height (m)} 
 
-During the model initialisation stage, ray tracing is done (Figure \ref{fig:initray}a) between all surfaces to determine which surfaces are visible to each other. This step reduces the number of radiative interactions of surfaces that will need to be considered throughout the simulation run. As the model runs a simulation, at each time step, TUF-3D runs a shading routine (Figure \ref{fig:shading}d). In it, the model iterates through each surface in the domain (roads and building walls and roofs) and ray-traces towards the sun. Each of these surfaces (patches) are divided into quarters and each of these are ray-traced from the centre of each quarter. 
+During the model initialisation stage, ray tracing is done (Figure \ref{fig:initray}a) between all surfaces to determine which surfaces are visible to each other. This step reduces the number of radiative interactions of surfaces that will need to be considered throughout the simulation run. As the model runs a simulation, at each time step, TUF-3D runs a shading routine (Figure \ref{fig:shading}b). In it, the model iterates through each surface in the domain (roads and building walls and roofs) and ray-traces towards the sun. Each of these surfaces (patches) are divided into quarters and each of these are ray-traced from the centre of each quarter. 
 
 
 Each surface keeps track of the level of illumination, the shade coefficient for that surface, at each timestep. If the ray passes to the top of the domain without being obstructed (i.e. surface 4) then 0.25 is added to the shade coefficient for that surface. If the ray is obstructed before reaching the top of the domain (i.e. surface 3), then nothing is added. Each surface has potential values of 0, 0.25, 0.5, 0.75 and 1.0. During the later energy balance step, an appropriate amount of incoming radiation is allocated to this surface based on this coefficient.
@@ -506,9 +506,9 @@ Each surface keeps track of the level of illumination, the shade coefficient for
 
 After model improvements to VTUF-3D are made, a similar parallel logic is used to represent the vegetation in the domain. These vegetation elements are ignored in the initialising ray-tracing (Figure \ref{fig:initray}a). As this data is used to determine which surfaces will never be visible to each other, vegetation, depending on its density, may allow some level of transmission and must be considered on a case by case basis during the simulation run.
 
-At each time step during the simulation, VTUF-3D now runs a modified shading routine (Figure \ref{fig:modshading}e). During the model iteration through each surface in the domain, ray-traces towards the sun are done as described previously. However, each step of the ray trace checks to see if vegetation has been encountered. If vegetation is encountered, a vegetation encountered flag is set. Then the ray trace continues and concludes when it either passes out of the domain or is blocked by a building. 
+At each time step during the simulation, VTUF-3D now runs a modified shading routine (Figure \ref{fig:modshading}c). During the model iteration through each surface in the domain, ray-traces towards the sun are done as described previously. However, each step of the ray trace checks to see if vegetation has been encountered. If vegetation is encountered, a vegetation encountered flag is set. Then the ray trace continues and concludes when it either passes out of the domain or is blocked by a building. 
 
-To resolve the sunlit factor for surfaces that encountered vegetation during the ray trace, reverse ray tracing is done for those beams (Figure \ref{fig:modshadingreverse}f). For surfaces 5 and 6, ray tracing is done from the top of the domain back along the radiation path. When the ray encounters vegetation (surfaces 5 and 6), VTUF-3D looks up the tree associated with the ground surface below and loads the offline calculations of the amount of radiation reflected, absorbed, and transmitted through the vegetation (further described in Section \ref{sec:MAETrans}). The ray tracing continues, allocating the remaining radiation either to further intercepting vegetation or ultimately to the ground surface. Through this reverse ray tracing process, the problem of zero to many surface interceptions is solved by allocating radiation as it is transmitted from the sun and transmits through the zero to many objects it encounters along its path. 
+To resolve the sunlit factor for surfaces that encountered vegetation during the ray trace, reverse ray tracing is done for those beams (Figure \ref{fig:modshadingreverse}d). For surfaces 5 and 6, ray tracing is done from the top of the domain back along the radiation path. When the ray encounters vegetation (surfaces 5 and 6), VTUF-3D looks up the tree associated with the ground surface below and loads the offline calculations of the amount of radiation reflected, absorbed, and transmitted through the vegetation (further described in Section \ref{sec:MAETrans}). The ray tracing continues, allocating the remaining radiation either to further intercepting vegetation or ultimately to the ground surface. Through this reverse ray tracing process, the problem of zero to many surface interceptions is solved by allocating radiation as it is transmitted from the sun and transmits through the zero to many objects it encounters along its path. 
 
 \subsubsection{MAESPA vegetation transmission and energy balance functionality overview}\label{sec:MAETrans}
 
@@ -522,7 +522,7 @@ The second integration of MAESPA is used in the surface energy balances. Flux am
 
 \subsubsection{VTUF-3D use of MAESPA differential shading values}\label{sec:4diffshading}
 
-In order to account for inner tree shading or shading by buildings, each tree in the domain is modelled two times, using varied amounts of incoming shortwave and the proper data variation is chosen during the model run. The incoming shortwave is varied in two different ways. The first uses 100\% values. The second reduces incoming shortwave to diffuse values only. Proper forcing data will need to be provided by the user to supply these values. As shortwave radiation levels vary in locations in an urban canyon across the diurnal cycle, use of these differential values captures the differing vegetation responses, such as varying levels of photosynthesis due to lower levels of PAR, changes in surface temperatures, and varying vegetation evapotranspiration due to differences in stomatal conductance and vapour pressure deficits.
+In order to account for intra-tree shading or shading by buildings, each tree in the domain is modelled twice, using varied amounts of incoming shortwave. The proper data variation for each is chosen during the model run. The incoming shortwave is varied in two different ways. The first uses 100\% values. The second reduces incoming shortwave to diffuse values only. Proper forcing data will need to be provided by the user to supply these values. As shortwave radiation levels vary in locations in an urban canyon across the diurnal cycle, use of these differential values captures the differing vegetation responses, such as varying levels of photosynthesis due to lower levels of PAR, changes in surface temperatures, and varying vegetation evapotranspiration due to differences in stomatal conductance and vapour pressure deficits.
 
 
 
@@ -531,9 +531,7 @@ In order to account for inner tree shading or shading by buildings, each tree in
 
 
 
-As all tree parameterisations in VTUF-3D are pluggable, individual trees are added to a domain using a specific set of configuration files with many of the physical properties scaled from a base template.  Including additional vegetation types (trees, shrubs, and ground cover) into VTUF-3D can be added by populating templates with parameter values based on observations or literature values. 
-
-Currently there are parameterisations for two tree species, \textit{Olea europaea} and \textit{Lophostemon Confertus}, as well as turf grass, tall fescue (\textit{Festuca arundinacea}). An example is shown in \ref{sec:maespavegpara}.  
+As all the vegetation parameterisations in VTUF-3D are pluggable, individual elements are added to a domain using a specific set of configuration files with many of the physical properties scaled from a base template.  Including additional vegetation types (trees, shrubs, and ground cover) into VTUF-3D can be added by populating templates with parameter values based on observations or literature values. Currently there are complete parameterisations for two tree species, \textit{Olea europaea} and \textit{Lophostemon Confertus}, as well as turf grass, tall fescue (\textit{Festuca arundinacea}). An example is shown in \ref{sec:maespavegpara}.  
 
 
 \section{Results}
@@ -579,7 +577,7 @@ A modelled domain (500x500m with a 5m grid resolution) was chosen to be represen
   \end{tabular} 
  \end{table}  
 
-Aerial imagery from 2015 was used as an initial basis for the modelling domain. Some reduction in vegetation cover is seen between the 2004 observation site classification and the 2008 Darebin Council area classification. This introduces a small amount of uncertainly in the exact make-up of the modelling domain and could explain some of the low predictions of $Q_{E}$ seen later in this validation. While this dataset is at a different scale and from a later time period, it does show good agreement with the total impervious/pervious fraction of the 500m classification. Overall, the modelled domain selection is very similar to the broader area, is representative of the local scale and will allow an appropriate comparison between the observed and modelled results. 
+Aerial imagery from 2015 \citep{GooglePreston2015} was used as an initial basis for the modelling domain. Some reduction in vegetation cover is seen between the 2004 observation site classification and the 2008 Darebin Council area classification. This introduces a small amount of uncertainly in the exact make-up of the modelling domain and could explain some of the low predictions of $Q_{E}$ seen later in this validation. While this dataset is at a different scale and from a later time period, it does show good agreement with the total impervious/pervious fraction of the 500m classification. Overall, the modelled domain selection is very similar to the broader area, is representative of the local scale and will allow an appropriate comparison between the observed and modelled results. 
 
 %\begin{figure}[!htbp]
 %\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{/home/kerryn/Documents/Work/PrestonData/Preston-5m_Heights.png}     
@@ -697,7 +695,7 @@ As an extension to the TUF-3D model, the addition of vegetation and associated $
 
 In addition, schemes that integrate vegetation perform better than those who use a tiling method to include the vegetation. Another important result from this intercomparison project is that $Q_{E}$ is the least well modelled flux across a range of urban land surface modelling schemes \citep{Grimmond2010}. Even the SUEWS model, which includes vegetation, as well as a very complete urban hydrology, tends to under-estimate $Q_{E}$ fluxes during day-time \citep{Jarvi2011}.
 
-It is anticipated that the innovative method taken in this project, the first time vegetation has been tiled and incorporated into a micro-scaled surface energy balance model, will bring performance improvements over the previous model which did not consider vegetation. This will be seen to be the case, shown in the the results of the Pr04NoVeg no vegetation validation scenario later in this section. 
+It is anticipated that the innovative method taken in this project, the first time vegetation has been tiled and incorporated into a micro-scaled surface energy balance model, will bring performance improvements over the previous model which did not consider vegetation. This will be seen to be the case, shown in the the results of the Pr04NoVeg no vegetation validation scenario (Section \ref{sec:baselinenoveg}). 
 
 In addition to the improved modelling performance, the addition of vegetation modelling has dramatically improved the applicability of VTUF-3D to a wide range of modelling problems. Indeed, without this addition, the main aim of this model, to determine the thermal comfort improvements due to WSUD features would not be possible. 
 
@@ -717,11 +715,11 @@ The third limitation is the full diversity of vegetation and trees of the modell
 
 Finally, values of $Q_{F}$, anthropogenic heat (Wm$^{-2}$), are not accounted for in the VTUF-3D model, but which do contribute to the total $Q_{H}$ fluxes in the observations. Flux values for this modelling and observation period (summertime) are anticipated to contribute peaks of over 15 Wm$^{-2}$ for low density cities and peaks of 30-60 Wm$^{-2}$ for medium density areas \citep{Sailor2004}. In both the observations and modelling results, these unaccounted fluxes will be present in the errors for the four observed and modelled fluxes.
 
-There will remain an amount of uncertainty in comparing the modelled results to the observations because of the nature of both. The observations were collected via a flux tower at 40m height, above the height of the urban roughness sublayer. The modelled results are the average of the fluxes from all of the urban surfaces, within the urban canyon and well within the urban roughness sublayer. While these comparisons can be done (i.e. \cite{Grimmond2011}), there remains an amount of uncertainly as they are comparing two slightly different things. 
+There will remain an amount of uncertainty in comparing the modelled results to the observations because of the nature of both. The observations were collected via a flux tower at 40m height, above the height of the urban roughness sublayer. The modelled results are the average of the fluxes from all of the urban surfaces, within the urban canyon and well within the urban roughness sublayer. While these comparisons can be done, i.e. \cite{Grimmond2011}, there remains an amount of uncertainly as they are comparing two slightly different things. 
 
 A final consideration is that the under-prediction of $Q_{E}$ is likely contributing to the over-estimating of $Q_{G}$ (calculated as a residual in MAESPA vegetation tiles). An improvement in modelling of the $Q_{E}$ fluxes will likely lead to an improvement in the modelled $Q_{G}$ fluxes. 
 
-\subsubsection{No vegetation baseline scenario}
+\subsubsection{No vegetation baseline scenario}\label{sec:baselinenoveg}
 
 To demonstrate the significant improvement of the model, the VTUF-3D model was run with a no vegetation scenario. This scenario (named Pr04NoVeg), will represent an unimproved TUF-3D without vegetation modelling capability, as the lack of vegetation will not trigger any of the new logic and improvements added to the model. This will allow an analysis of level of improvement of VTUF-3D modelling over the previous TUF-3D model. As discussed earlier in this section, the Intercomparison project found that models without vegetation were among the poorest performers.
  
