Before the version I sent to Andy.

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -93,12 +93,12 @@
 
 
 %% use optional labels to link authors explicitly to addresses:
-\author[monash,crc]{Kerry~Nice\corref{cor1}}
+\author[monash,crc]{Kerry~A~Nice\corref{cor1}}
 \ead{mothlight@fastmail.fm}
 \author[monash,crc]{Andrew Coutts}
 \author[monash,crc]{Nigel~Tapper}
 \cortext[cor1]{Principal corresponding author}
-\address[monash]{School of Earth, Atmosphere and Environment, Monash University, Australia}
+\address[monash]{School of Earth, Atmosphere and Environment, Monash University, Clayton, VIC 3800, Australia}
 \address[crc]{CRC for Water Sensitive Cities, Australia}
 
 
@@ -214,7 +214,7 @@ Heat conduction between the layers in each surface in VTUF-3D (based on TUF-3D) 
 \nomenclature{$Q^{*}_{veg}$}{calculation of vegetation net radiation flux density (Wm$^{-2}$)}
 \nomenclature{$Q^{*}$}{net radiation flux density (Wm$^{-2}$)} 
 
-As the simulation proceeds through each time step, an energy balance is performed on each surface. For each surface with vegetation, the surface temperature ($T_{sfc}$) is set to the value calculated by MAESPA for that tree. The following describe the differences from the normal calculations the unmodified TUF-3D uses to calculate the energy balances needed by VTUF-3D to partition the energy fluxes of a vegetated surface.
+As the simulation proceeds through each time step, an energy balance is performed on each surface. For each surface with vegetation, the surface temperature ($T_{sfc}$) is set to the value calculated by MAESPA for that tree. The following describes the differences from the normal calculations the unmodified TUF-3D uses to calculate the energy balances needed by VTUF-3D to partition the energy fluxes of a vegetated surface.
 
 Net radiation, is calculated in Equation (\ref{eq:rnet}) ($Q^{*}_{veg}$ for vegetated grid squares, otherwise $Q^{*}$), 
 
