Finished revising introduction

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -89,7 +89,7 @@
 %% \address{Address\fnref{label3}}
 %% \fntext[label3]{}
 
-\title{Creation of the VTUF-3D v1.0 urban micro-climate model to support assessments of urban vegetation influences on HTC at a micro-scale in urban canyons}
+\title{Development of the VTUF-3D v1.0 urban micro-climate model to support assessments of urban vegetation influences on HTC}
 
 
 %% use optional labels to link authors explicitly to addresses:
@@ -104,18 +104,14 @@
 
 \begin{abstract}
 
-With urban areas facing future longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) in urban areas requires a modelling tool suited for this task. This model must provide sufficient resolution to resolve urban influences on HTC and the ability to model the physiological processes of vegetation. The lack of such a model has been identified as a research gap in the urban climate area and has impaired the ability to fully examine the use of urban greenery and water for improved human thermal comfort. 
-
-A new model, VTUF-3D (Vegetated Temperatures Of Urban Facets), addresses this gap by embedding the functionality of the MAESPA tree process model \citep{Duursma2012}, that can model individual trees, vegetation, and soil components, within the TUF-3D \citep{Krayenhoff2007} urban micro-climate model. An innovative tiling approach, allows the new model to account for important vegetative physiological processes and shading effects using configurable templates to allow representation of any type of vegetation or water sensitive design feature. The high resolution of VTUF-3D is sufficient to examine the processes that drive human thermal comfort (HTC). This allows detailed calculations of surface temperatures, mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across an urban canyon. 
+With urban areas facing future longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. A new micro-scale model, VTUF-3D (Vegetated Temperatures Of Urban Facets), has been developed to achieve this, by embedding the functionality of the MAESPA tree process model \citep{Duursma2012}, that can model individual trees, vegetation, and soil components, within the TUF-3D \citep{Krayenhoff2007} urban micro-climate model. An innovative tiling approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This allows detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across an urban canyon. This study presents an outline of VTUF-3D, along with a validation of the modelled surface energy balance for Preston, Australia \citep{Coutts2007}. The VTUF-3D model has shown it performs well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment. Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on temperatures in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to maximise temperature moderation effects and be used to generate best practices guidelines for urban greening.
 
 \nomenclature{$T_{mrt}$}{mean radiant temperature (\SI{}{\degreeCelsius})}  
 \nomenclature{$UTCI$}{universal thermal climate index}
-
-An extensive validation process, using three different observation data sets to validate a number of different and key aspects of the VTUF-3D model, has shown it performs well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment. Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on temperatures in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to maximise temperature moderation effects and be used to generate best practices guidelines for urban greening.
 \end{abstract}
 
 \begin{keyword}
-micro-climate modelling urban vegetation
+micro-climate modelling, urban vegetation, VTUF-3D
 %% keywords here, in the form: keyword \sep keyword
 
 %% PACS codes here, in the form: \PACS code \sep code
@@ -141,19 +137,34 @@ micro-climate modelling urban vegetation
 %% main text
 
 \section{Introduction}\label{sec:introduction}
-Urban areas are facing a growing number of problems. Populations of urban areas, holding the majority of the world's population \citep{UNDESA2015,WHO2016}, are becoming denser while demographics are shifting towards increased older and elderly citizens \citep{ABS2008}. There are rapid conversions of green spaces into urban areas \citep{DSE2002,Coutts2007}. Climate trends are towards increased average temperatures and increasing temperature extremes \citep{Alexander2009,IPCC2013a}. At the same time, there is an increasing understanding of impacts to human health of extreme temperatures \citep{Katsouyanni1993,Nicholls2008,Loughnan2010}. These factors leave those in urban areas in an increasingly dangerous position. In coming years, strategies are needed to adapt to and deal with these challenges.
 
-Incorporating water sensitive urban design (WSUD) and urban greening principles into urban areas can be an effective way to deal with many of these problems. From an examination of a range of different studies exploring cooling effects of urban greenery \citep{Tsiros2010,Shashua-Bar2000,Shashua-Bar2010a,Spangenberg2008}, it is clear that increased vegetation and water can have an impact, from city-wide scale down to a micro-climate street level scale \citep{Coutts2012}. Shading and evapotranspiration are cited \citep{Bowler2010} as the main drivers of these cooling effects. Also cited are factors of vegetation density, orientation, and amounts of irrigation used. 
 
-WSUD is premised on the use of captured and retained stormwater as an additional urban water source \citep{Wong2009}. It uses engineered and natural features (trees and vegetation) to capture, filter, and store water, while restoring a more natural water balance distorted by impervious surfaces and other modifications to previously natural landscapes. A more focused effort in using WSUD and WSUD features (especially the vegetated components) for urban climate benefits can deliver improvements to human thermal comfort (HTC). An extension to WSUD, Climate Sensitive Urban Design (CSUD) proposes exactly to do this \citep{Coutts2012}. The three mechanisms cited to provide these benefits are oasis effects (cooling through evapotranspiration), the use of WSUD augmented water supplies to promote healthy vegetation, which provides shading and transpiration cooling effects, and finally the reduction of surface temperatures. However, with only a small body of work in this area, \cite{Coutts2012} cites the need for additional research to fully explore these possibilities. 
 
-A suitable modelling tool is needed, as guidance on how to most effectively use WSUD for HTC benefits is lacking. More importantly, there is a lack of solid quantitative assessments of how well WSUD and CSUD can perform in urban areas in terms of heat mitigation. A review shows there are a number of models available and techniques suitable to model urban areas, and to a lesser extent, to include vegetation as part of this assessment \citep{Nice2016}. A suitable modelling tool for these assessments needs to resolve detailed temperature gradients (as well as wind speed and humidity in order to calculate HTC) across a modelled urban canyon. This necessitates micro-scaled resolution. In addition, proper modelling of latent energy fluxes and vegetation is critical to WSUD studies, as a desired side effect of WSUD is localised cooling effects due to increased water and vegetation within the urban canyon. However, no existing models meet this requirement. Models such as SOLWEIG \citep{SOLWEIG2011} and RayMan \citep{Matzarakis2007,Matzarakis2010} resolve at a suitable scale and generate useful insights into urban areas \citep{Chen2014a}, however they only capture the radiation shading effects of vegetation, and are unable to account for the effects of water and evaportranspiration. At the other end of the complexity spectrum, a number of models, primarily based on computational fluid dynamics (CFD), are able to resolve at a micro-scale and account for many of the influences of vegetation \citep{Bailey2014,Bailey2016,Kunz2000,Schlunzen2011a,Yamada2011,Bruse1999}. However their complexity and computational intensity leaves them out of reach for less specialised users.
 
-What is needed is an approach that fits in between these two levels of complexity, a new innovative method to balance detail, accuracy, and complexity with efficiency and usability, while also being able to consider a wide variety of vegetation types and arrangements. This approach needs to capture the detailed movement of radiation through complex urban areas integrated with a widely configurable amount of vegetation. It also needs to balance this complexity against usability to create a model that can be widely used to consider a large variety of questions about HTC impacts of urban vegetation in support of urban planning decisions and guidelines. 
 
-The TUF-3D (Temperatures Of Urban Facets in 3D) model \citep{Krayenhoff2007} has been identified as a starting point for a new model that will address these problems, however its lack of vegetation and water modelling leaves it incomplete. Coupling TUF-3D with the MAESPA model \citep{Duursma2012}, allowing insertion of any type of vegetation in any arrangement, accounting for vegetation structural and physiological processes and including their influences, can create the model needed for assessing WSUD features in support of HTC in urban areas.
 
-Now, with the completion of this new model, VTUF-3D (Vegetated Temperatures Of Urban Facets) v1.0, it can be used to start assessing the impacts of WSUD. This can facilitate the integration of urban greening into the urban landscapes and inform planning decisions with urban climate knowledge about how to best utilise urban greening to maximise the thermal comfort impacts and meet the challenges of urban heat. The cooling benefits of urban vegetation, through shading effects and evapotranspiration, can be examined for their micro-climate benefits, filling a large research gap on how to best protect human health in light of all the concerning trends progressing in urban areas.
+Urban areas are facing a growing number of challenges. Cities are now home to the majority of the world's population and trends will result in further increases \citep{UNDESA2015,WHO2016}. To accommodate increasing urban populations \citep{ABS2008}, cities are expanding \citep{Seto2011} and densifying \citep{Byrne2016,Ruth2016,DSE2002}, leading to loss of urban green spaces \citep{Hamin2009,Coutts2007}. In these increasingly urbanised areas, the removal of vegetation, combined with rapid stormwater removal, and possibly restricted irrigation during drought conditions, can leave urban landscape water starved. Urban development that does not consider the implications on urban climate, risks intensifying urban heating and compromising the thermal comfort of city residents. In addition, climate trends are towards increased average temperatures and increasing temperature extremes \citep{Alexander2009,IPCC2013a}. This is concerning given the increasing understanding of the impacts on human health of extreme temperatures \citep{Katsouyanni1993,Nicholls2008,Loughnan2010} and demographics that are shifting towards increased older and elderly citizens \citep{Cohen2003,FIFARS2016} that are particularly vulnerable to extreme heat. These factors leave those in urban areas in an increasingly dangerous position. In coming years, strategies are needed to adapt to and deal with these challenges.
+
+Incorporating more vegetation and water into urban areas can be an effective way to mitigate extreme urban temperatures. From an examination of a range of different studies exploring cooling effects of urban greenery \citep{Tsiros2010,Shashua-Bar2010a,Spangenberg2008}, it is clear that increased vegetation and water can have positive benefits, from city-wide scale down to a micro-climate street level scale \citep{Coutts2012}. Shading and evapotranspiration are cited as the main drivers of these cooling effects \citep{Bowler2010}. The degree of cooling effects are variable however, and depend on factors such as vegetation density \citep{Hall2016,Bodnaruk2017}, street orientation and aspect ratio \citep{Thorsson2011,Ali-Toudert2006b}, and amounts of irrigation used \citep{Jenerette2011}. Trees in particular provide a strong benefit for HTC during the day, especially those with large, dense canopies that provide shade and are well irrigated to promote transpiration \citep{Coutts2015,Huang2008,Ylmaz2007,Shashua-Bar2000}. Water sensitive urban design (WSUD) presents an opportunity to capture and retain stormwater in urban areas using engineered and natural features (trees and vegetation) to capture, filter, and store water as an additional urban water source \citep{Wong2009}. A more focused effort in using trees and WSUD for urban climate benefits can deliver improvements to human thermal comfort (HTC) \citep{Coutts2012}. 
+
+%WSUD is premised on the use of captured and retained stormwater as an additional urban water source \citep{Wong2009}. It uses engineered and natural features (trees and vegetation) to capture, filter, and store water, while restoring a more natural water balance distorted by impervious surfaces and other modifications to previously natural landscapes. A more focused effort in using WSUD and WSUD features (especially the vegetated components) for urban climate benefits can deliver improvements to human thermal comfort (HTC). An extension to WSUD, Climate Sensitive Urban Design (CSUD) proposes exactly to do this \citep{Coutts2012}. The three mechanisms cited to provide these benefits are oasis effects (cooling through evapotranspiration), the use of WSUD augmented water supplies to promote healthy vegetation, which provides shading and transpiration cooling effects, and finally the reduction of surface temperatures. However, with only a small body of work in this area, \cite{Coutts2012} cites the need for additional research to fully explore these possibilities. 
+
+While the benefits of urban vegetation and water are well understood in the climate community, uptake and application of knowledge in urban planning is lacking. Yet, \cite{Bowler2010} suggests that the current research does not demonstrate exactly how urban greening should be implemented in terms of abundance, type and distribution.  A suitable modelling tool is needed to provide solid quantitative assessments of the effectiveness of trees and water in terms of heat mitigation, across contrasting micro-scale urban environments and therefore provide guidance on how to most effectively use trees and WSUD for improved HTC. 
+
+%A suitable modelling tool is needed, as guidance on how to most effectively use WSUD for HTC benefits is lacking. More importantly, there is a lack of solid quantitative assessments of how well WSUD and CSUD can perform in urban areas in terms of heat mitigation. A review shows there are a number of models available and techniques suitable to model urban areas, and to a lesser extent, to include vegetation as part of this assessment \citep{Nice2016}. 
+
+
+A suitable modelling tool for these assessments needs to resolve detailed temperature gradients (as well as wind speed and humidity in order to calculate HTC) across a modelled urban canyon. This necessitates micro-scaled resolution climate modelling. In addition, modelling needs to incorporate important cooling mechanisms of evapotranspiration and shading. This requires proper modelling of vegetation, including vegetation physiology to estimate accurate latent energy fluxes and the soil-vegetation-atmosphere pathway critical for vegetation and WSUD assessments within the urban canyon. Models such as SOLWEIG \citep{SOLWEIG2011} and RayMan \citep{Matzarakis2007,Matzarakis2010} resolve at a suitable scale and generate useful insights into mean radiant temperatures in urban areas \citep{Chen2014a}, however they only capture the radiation shading effects of vegetation, and are unable to account for the effects of water and evapotranspiration. At the other end of the complexity spectrum, a number of models, primarily based on computational fluid dynamics (CFD), are able to resolve at a micro-scale and account for many of the influences of vegetation \citep{Bailey2014,Bailey2016,Kunz2000,Schlunzen2011a,Yamada2011,Bruse1999}. However their complexity and computational intensity leaves them out of reach for less specialised users.
+
+%A suitable modelling tool for these assessments needs to resolve detailed temperature gradients (as well as wind speed and humidity in order to calculate HTC) across a modelled urban canyon. This necessitates micro-scaled resolution. In addition, proper modelling of latent energy fluxes and vegetation is critical to WSUD studies, as a desired side effect of WSUD is localised cooling effects due to increased water and vegetation within the urban canyon. However, no existing models meet this requirement. Models such as SOLWEIG \citep{SOLWEIG2011} and RayMan \citep{Matzarakis2007,Matzarakis2010} resolve at a suitable scale and generate useful insights into urban areas \citep{Chen2014a}, however they only capture the radiation shading effects of vegetation, and are unable to account for the effects of water and evaportranspiration. At the other end of the complexity spectrum, a number of models, primarily based on computational fluid dynamics (CFD), are able to resolve at a micro-scale and account for many of the influences of vegetation \citep{Bailey2014,Bailey2016,Kunz2000,Schlunzen2011a,Yamada2011,Bruse1999}. However their complexity and computational intensity leaves them out of reach for less specialised users.
+
+What is needed is an approach that fits in between these two levels of complexity, a new innovative method to balance detail, accuracy, and complexity with efficiency and usability, while also being able to consider a wide variety of vegetation types and arrangements. This approach needs to capture the detailed movement of radiation through complex urban areas integrated with a widely configurable amount of vegetation. It also needs to balance this complexity against usability to create a model that can be widely used to consider a large variety of questions about HTC impacts of urban vegetation in support of urban planning decisions and guidelines. This study presents the development of a new model: VTUF-3D (Vegetated Temperatures of Urban Facets in 3D v1.0) that aims to provide a model capable of assessing the benefits of vegetation (including trees) and WSUD on urban canopy layer air temperature and HTC. VTUF-3D is developed from the TUF-3D (Temperatures Of Urban Facets in 3D) model \citep{Krayenhoff2007} that prior to this study, lacked vegetation and water components. The TUF-3D was coupled with the MAESPA model \citep{Duursma2012}, allowing insertion of any type of vegetation in any arrangement, accounting for vegetation structural and physiological processes. This study also aims to evaluate the model, in terms of the surface energy balance, for an urban site in Melbourne, Australia.
+
+VTUF-3D has the capacity to address the research gap identified by \cite{Bowler2010} around identifying how vegetation (especially trees) should be implemented in terms of abundance, type and distribution, as well as the potential for accounting for water availability through WSUD. This can facilitate the integration of urban greening into the urban landscapes and inform planning decisions, with urban climate knowledge, about how to best utilise urban greening to maximise the thermal comfort impacts and meet the challenges of urban heat. VTUF-3D can help inform how to best to protect human health in light of all the concerning trends progressing in urban areas.
+
+%The TUF-3D (Temperatures Of Urban Facets in 3D) model \citep{Krayenhoff2007} has been identified as a starting point for a new model that will address these problems, however its lack of vegetation and water modelling leaves it incomplete. Coupling TUF-3D with the MAESPA model \citep{Duursma2012}, allowing insertion of any type of vegetation in any arrangement, accounting for vegetation structural and physiological processes and including their influences, can create the model needed for assessing WSUD features in support of HTC in urban areas.
+
+%Now, with the completion of this new model, VTUF-3D (Vegetated Temperatures Of Urban Facets) v1.0, it can be used to start assessing the impacts of WSUD. This can facilitate the integration of urban greening into the urban landscapes and inform planning decisions with urban climate knowledge about how to best utilise urban greening to maximise the thermal comfort impacts and meet the challenges of urban heat. The cooling benefits of urban vegetation, through shading effects and evapotranspiration, can be examined for their micro-climate benefits, filling a large research gap on how to best protect human health in light of all the concerning trends progressing in urban areas.
 
 \section{Methodology}\label{sec:method}
 
@@ -397,7 +408,7 @@ $h$, the convective heat transfer coefficient (Wm$^{-2}$K$^{-1}$) (see Equation 
 $\sigma$, the Stefan-Boltzmann constant (=5.67 $\times$ 10$^{-8}$Wm$^{-2}$K$^{-4}$), 
 $T_{a}$, the dry bulb air temperature (K) (using $T_{can}$), 
 $T_{sfc}$, the surface temperature (K), 
-$S$, the horizontal solar irradiance (Wm$^{-2}$) calculated from the total of absorbed and reflected shortwave (resulting from calculations in Section \ref{sec:radiativetransfer}), 
+S, the horizontal solar irradiance (Wm$^{-2}$) calculated from the total of absorbed and reflected shortwave (resulting from calculations in Section \ref{sec:radiativetransfer}), 
 $\theta$, the solar zenith angle, 
 $\alpha_{sfc}$, the surface albedo (=0.15),  
 $\alpha_{g}$, the globe albedo (=0.05), and 
